--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ phonenumbers==8.13.33
 pillow==10.3.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2024.1
 razorpay==1.4.2
 reportlab==4.2.0
