--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .env
+# Python bytecode and cache files
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Django-specific
+*.log
+media/
+staticfiles/
+
+# Django migrations
+*/migrations/*.py
+!*/migrations/__init__.py
